--- a/server/config/server_config.yaml
+++ b/server/config/server_config.yaml
@@ -10,5 +10,5 @@ clickhouse:
   host: "localhost"         # ClickHouse 主机地址
   port: 9000                # ClickHouse 端口
 
-log_file: "logs/server.log"
+log_file: "/root/logs/server.log" # 日志文件路径
 
