--- a/client/docker-compose.yml
+++ b/client/docker-compose.yml
@@ -11,18 +11,12 @@ services:
     volumes:
       - ./config:/root/config  # 挂载本地 config 目录到容器内的 /root/config 目录
       - ./logs:/root/logs  # 挂载本地 logs 目录到容器内的 /root/logs 目录
-    command: ["./client-app"]
-
-
-
-  rabbitmq:
-    image: rabbitmq:3-management
-    container_name: client_rabbitmq
     ports:
-      - "5672:5672"
-      - "15672:15672"
-    volumes:
-      - rabbitmq_data:/var/lib/rabbitmq
+      - "8081:8081"
+    command: ["./client-app"]
+    networks:
+      - my_network
 
-volumes:
-  rabbitmq_data:
+networks:
+  my_network:
+    external: true
